--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #2c2e2a;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -77,6 +77,9 @@
   --bs-link-hover-color: #17667f;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fbf1cd;
+  --secondary-colour: #ffcd74;
+  --primary-colour: #1E1C1C;
+  --text-colour: white;
 }
 
 *,
@@ -3623,7 +3626,7 @@ textarea.form-control-lg {
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
   font-weight: var(--bs-nav-link-font-weight);
-  color: #FFffff;
+  color: var(--text-colour);
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -10805,7 +10808,7 @@ footer.footer .social-link:hover {
 
 .navbar-nav .nav-item.active .nav-link {
   color: #fff;
-  background-color: #ffcd74;
+  background-color: var(--secondary-colour);
   font-weight: bold;
 }
 
@@ -10861,7 +10864,7 @@ footer.footer .social-link:hover {
   position: absolute;
   width: 100%;
   height: 2px; 
-  background-color: #ffcd74; 
+  background-color: var(--secondary-colour); 
   left: -100%; 
   bottom: 0;
   transition: left 0.5s ease; 
@@ -10876,7 +10879,7 @@ footer.footer .social-link:hover {
 }
 
 .border-div {
-  border: 1px solid #ffcd74;
+  border: 1px solid var(--secondary-colour);
   border-radius: 1rem;
   padding: 3rem;
 }
@@ -10914,33 +10917,34 @@ footer.footer .social-link:hover {
 }
 
 body.theme{
-  background-color: #1E1C1C; 
-  color: #FFFFFF;
+  background-color: var(--primary-colour); 
+  /* background-color: #2c2e2a; */
+  color: var(--text-colour);
 }
 
 .btn-theme{
-  border: solid #ffcd74;
+  border: solid var(--secondary-colour);
   background-color: #222222;
-  color: #ffffff;
+  color: var(--text-colour);
 }
 
 .navbar-theme{
   background-color: #222222;
-  color: #ffffff;
+  color: var(--text-colour);
 }
 
 #portfolio_button{
   font-weight: bold;
-  color: #ffffff;
+  color: var(--text-colour);
 }
 
 #portfolio_button:hover{
-  color: #ffcd74;
+  color: var(--secondary-colour);
 }
 
 .btn:hover{
   background-color: #8C8C8C;
-  border: solid #ffcd74;
+  border: solid var(--secondary-colour);
 }
 
 .list-group-item{
@@ -10951,9 +10955,13 @@ body.theme{
 }
 
 .fa-arrow-right{
-  color: #ffcd74;
+  color: var(--secondary-colour);
 }
 
 #contact{
   margin-top: 50px;
+}
+
+#aboutme{
+  border: dotted 2px var(--secondary-colour);
 }
