--- a/css/styles.css
+++ b/css/styles.css
@@ -118,8 +118,17 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
+  align-items: center; */
+  align-items: center;
+  height: 100vh;
 }
 
+#page_container{
+  width: 100%
+}
 
 body,
 html {
@@ -154,7 +163,7 @@ footer.footer .social-link {
   height: 4rem;
   width: 4rem;
   line-height: 4.3rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   background-color: #222222;
   border: solid white;
   transition: background-color 0.15s ease-in-out;
@@ -325,8 +334,8 @@ body.theme{
 .list-group-item{
   background-color: #222222;
   color: white;
-  margin-right: 0.2rem;
-  margin-left: 0.2rem;
+  /* margin-right: 0.2rem;
+  margin-left: 0.2rem; */
   font-size: 0.7rem;
 }
 
@@ -360,8 +369,6 @@ body.theme{
 
 @media (min-width: 768px) {
   .list-group-item{
-    margin-right: 2rem;
-    margin-left: 2rem;
     font-size: 0.8rem;
   }
   .responsive-text {
@@ -371,12 +378,13 @@ body.theme{
     width: 300px;
     height: 300px;
   }
+  #page_container{
+    width: 80%
+  }
 }
 
 @media (min-width: 992px) {
   .list-group-item{
-    margin-right: 5rem;
-    margin-left: 5rem;
     font-size: 1rem;
   }
   .responsive-text {
@@ -386,9 +394,12 @@ body.theme{
     width: 350px;
     height: 350px;
   }
+  #page_container{
+    width: 60%
+  }
 }
 .fade-object{
-  transition: opacity 1.5s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 
 .glow-card {
